tests/examples/fail/sort_checking_forall.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
immutable r(s): bool

assert forall x:s. r(x = x)
